--- a/package.json
+++ b/package.json
@@ -15,7 +15,9 @@
   "dependencies": {
     "@prisma/adapter-pg": "^6.13.0",
     "@prisma/client": "^6.13.0",
+    "axios": "^1.13.3",
     "bcrypt": "^6.0.0",
+    "bull": "^4.16.5",
     "express": "^5.2.1",
     "joi": "^18.0.2",
     "jsonwebtoken": "^9.0.2",
@@ -24,7 +26,24 @@
     "redis": "^4.6.13"
   },
   "devDependencies": {
+    "@types/jest": "^29.5.8",
     "dotenv": "^17.2.3",
-    "nodemon": "^3.1.4"
+    "jest": "^29.7.0",
+    "nodemon": "^3.1.4",
+    "supertest": "^6.3.4"
+  },
+  "jest": {
+    "testEnvironment": "node",
+    "testMatch": [
+      "**/tests/**/*.test.js"
+    ],
+    "collectCoverageFrom": [
+      "src/**/*.js",
+      "!src/server.js",
+      "!src/app.js"
+    ],
+    "setupFilesAfterEnv": [
+      "<rootDir>/tests/setup.js"
+    ]
   }
 }
